# immigrant-guru

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  docker-compose.minio.yml  docker-compose.payments.yml  ecosystem.config.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
Immigrant AI/apps/api/: .env.example  alembic.ini  pyproject.toml
Immigrant AI/apps/api/alembic/: env.py
Immigrant AI/apps/api/alembic/versions/: 18d8484a43fd_full_schema.py  7b4fc9b35c4b_init.py  a1b2c3d4e5f6_add_token_version_to_users.py  a2c4d6e8f102_add_knowledge_chunk_embeddings.py  c3d4e5f6a7b8_add_email_verified_to_users.py  c91d4e2a5501_add_case_outcomes_and_ai_feedback.py  d3d2f9b1d001_add_case_probability_fields.py  d4e5f6a7b8c9_add_billing_columns_to_users.py  e5f6a7b8c9d0_add_push_device_tokens.py  e84f0f8c1302_add_case_timeline_snapshots.py  f10e2bc7a401_add_copilot_threads_and_messages.py  f6a7b8c9d0e1_add_oauth_providers_to_users.py
Immigrant AI/apps/api/app/: __init__.py  main.py
Immigrant AI/apps/api/app/api/: router.py
Immigrant AI/apps/api/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
Immigrant AI/apps/api/app/db/: base.py  session.py  vector.py
Immigrant AI/apps/api/app/models/: __init__.py  ai_feedback.py  audit_log.py  case_outcome.py  case_timeline_snapshot.py  copilot_message.py  copilot_thread.py  document.py  enums.py  immigration_case.py  knowledge_chunk.py  knowledge_source.py  mixins.py  push_device_token.py  user.py  user_profile.py
Immigrant AI/apps/api/app/schemas/: __init__.py  ai.py  ai_feedback.py  auth.py  case_outcome.py  comparison.py  copilot.py  database.py  document.py  eligibility.py  health.py  immigration_case.py  knowledge.py  probability.py  scoring.py  simulation.py  timeline.py  user.py  user_profile.py  visa_match.py  workspace.py
Immigrant AI/apps/api/app/services/: __init__.py  action_prioritization_service.py  action_roadmap_service.py  ai_client.py  ai_feedback_service.py  ai_orchestrator.py  ai_pathway_probability_service.py  ai_prompt_builder.py  ai_timeline_simulation_service.py  (+40 more)
Immigrant AI/apps/api/scripts/: build_us_visa_catalog.py  validate_us_visa_catalog_runtime.py
Immigrant AI/apps/api/tests/: test_admin_kb.py  test_ai_prompt_builder.py  test_ai_routes.py  test_ai_strategy_quality.py  test_api_contracts.py  test_audit_service.py  test_billing_security.py  test_case_workspace_service.py  test_cases.py  test_comparison_service.py  test_context_assembler_service.py  test_document_audit_service.py  test_document_service.py  test_eligibility_engine_service.py  test_final_decision_service.py  test_full_stack_abuse_flow.py  test_health.py  test_kb.py  test_knowledge_structuring_service.py  test_model_integrity.py  test_pathway_probability_service.py  test_profile.py  test_risk_detection_service.py  test_scenario_simulation_service.py  test_scoring_service.py  test_security.py  test_settings.py  test_timeline_calculator_service.py  test_timeline_simulation_service.py  test_us_visa_knowledge_extraction_service.py  test_visa_bulletin_extraction_service.py  test_visa_intelligence_pipeline.py  test_visa_matching_service.py
Immigrant AI/apps/worker/: .env.example  pyproject.toml
Immigrant AI/apps/worker/app/: __init__.py  main.py
Immigrant AI/apps/worker/tests/: test_document_pipeline.py
(+1320 files in other folders)
