[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immigrant-ai-api"
version = "0.1.0"
description = "FastAPI backend for Immigrant AI"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "greenlet>=3.1,<4.0",
  "httpx>=0.28,<1.0",
  "openai>=1.75,<2.0",
  "PyJWT>=2.10,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "redis>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
