[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immigrant-ai-api"
version = "0.1.0"
description = "FastAPI backend for Immigrant AI"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "greenlet>=3.1,<4.0",
  "httpx>=0.28,<1.0",
  "openai>=1.75,<2.0",
  "PyJWT>=2.10,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "redis>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.15,<0.16",
  "mypy>=1.19,<2.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.12"
exclude = [
  "alembic/versions/",
  "tests/",
  "scripts/",
]
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "app.db.vector",
  "app.models.enums",
  "app.schemas.*",
  "app.services.ai_prompt_builder",
  "app.services.copilot_chat_service",
  "app.services.final_decision_service",
  "app.services.health_service",
  "app.services.knowledge_retrieval_service",
  "app.services.scoring_service",
  "app.services.timeline_calculator_service",
  "app.services.us_visa_knowledge_extraction_service",
]
ignore_errors = true
