[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immigrant-ai-worker"
version = "0.1.0"
description = "Background worker for Immigrant AI"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1.0",
  "greenlet>=3.1,<4.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "redis>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0"
]

[project.scripts]
immigrant-ai-worker = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
